# rust-node

./: .env.example  .env.mainnet.example  .gitignore  CONSENSUS_IMPLEMENTATION_COMPLETE.md  CONSENSUS_INTEGRATION_STATUS.md  Cargo.toml  Dockerfile.coordinator  Dockerfile.worker  Dockerfile.worker.gpu  E2E_PRODUCTION_PLAN.md  EVENT_INDEXER_AUDIT.md  GPU_PROOF_PIPELINE.md  HIGH_PRIORITY_ITEMS_COMPLETE.md  INTEGRATION_COMPLETE.md  MAINNET_DEPLOYMENT_CHECKLIST.md  OBELYSK_PROOF_PACKAGE.json  OBELYSK_STWO_PROOF_DEMO.md  PHASE1B_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_FINAL_SUMMARY.md  PHASE1_PROGRESS.md  PRODUCTION_IMPROVEMENTS.md  PROMETHEUS_METRICS.md  PROOF_SUBMISSION_RESULTS.md  README.md  STARKNET_PROOF_DEMO.json  STARKNET_PROOF_PACKAGE.md  TLS_SETUP.md  UI_BACKEND_INTEGRATION_GAPS.md  add_pair_db.sql  alerts.yml  benchmark_results.json  prometheus.yml  proof_package_for_starknet.json  rust-toolchain.toml  test_coordinator.sh
benches/: ec_operations.rs  montgomery_bench.rs
config/: coordinator.toml  indexer.toml  test_worker.toml  worker.toml
contracts/starknet/: prover_registry.cairo
data/consensus/: IDENTITY  LOG  LOG.old.1767338745714339  MANIFEST-000009  OPTIONS-000007
deploy/aws/: deploy.sh  deploy_coordinator.sh  docker-compose.coordinator.yml
docs/: CONSENSUS_ECDSA_SIGNATURES.md  GPU_DEPLOYMENT.md  GPU_QUICKSTART.md  GPU_WORKER_QUICKSTART.md  H100_DEPLOYMENT.md  IDEAL_PRIVACY_STATE.md  MONTGOMERY_OPTIMIZATION.md  ONBOARDING_GAPS.md  RANDOMNESS_SECURITY.md  SAGEGUARD_BRANDING.md  TEE_ATTESTATION_WHITELIST.md  VALIDATOR_DASHBOARD_PRODUCTION.md  VALIDATOR_DEPLOYMENT.md
examples/: batch_proof_benchmark.rs  cloud_gpu_demo.rs  confidential_pipeline_demo.rs  consensus_account_test.rs  consensus_e2e_test.rs  e2e_encrypted_inference.rs  e2e_invoice_test.rs  e2e_proof_on_chain.rs  gpu_benchmark.rs  gpu_m31_test.rs  gpu_vs_cpu_benchmark.rs  grind_pow_nonce.rs  investor_proof_demo.rs  large_scale_batch_proofs.rs  obelysk_etl_verification.rs  obelysk_fibonacci_proof.rs  obelysk_ml_inference.rs  obelysk_proof_of_attestation.rs  obelysk_simple_proof.rs  obelysk_tee_quote.rs  print_enclave.rs  real_ml_proof.rs  submit_ml_proof_to_starknet.rs  worker_contract_integration.rs
migrations/: 001_initial_schema.sql  002_dashboard_tables.sql  003_faucet_ip_tracking.sql  004_invoices.sql  005_social_task_completions.sql
scripts/: batch_submit_verify.sh  bitsage-deploy.sh  brev_deploy.sh  brev_setup.sh  check_tee_support.sh  deploy.sh  deploy_h100.sh  e2e_gpu_proof_submission.sh  full_gpu_proof_pipeline.py  gpu_batch_demo.sh  gpu_inference_benchmark.py  gpu_worker_setup.sh  install.sh  load-test.sh  mainnet-preflight.sh  mainnet_gpu_demo.sh  run_gpu_tests.sh  setup-monitoring.sh  setup-nginx.sh  setup-vllm.sh  setup.sh  test-workloads.sh  test_job_execution.sh  test_production_coordinator.sh
src/: coordinator_main.rs  lib.rs  types.rs
src/ai/: execution.rs
src/api/: cache.rs  captcha.rs  dashboard.rs  dashboard_db.rs  earnings_db.rs  faucet.rs  governance.rs  health.rs  job_monitoring.rs  job_submission.rs  jobs_db.rs  metrics.rs  metrics_aggregator.rs  mod.rs  network_db.rs  privacy.rs  privacy_swap.rs  proof_generation.rs  proofs_db.rs  relayer.rs  staking.rs  staking_db.rs  trading.rs  wallet_db.rs  websocket.rs  worker_heartbeat.rs
src/blockchain/: client.rs  contracts.rs  events.rs  mod.rs  types.rs  worker_bridge.rs
src/cloud/: gpu_manager.rs  mod.rs  provider_integration.rs  providers.rs
src/compute/: data_executor.rs  executor.rs  job_estimation.rs  job_executor.rs  mod.rs  model_executor.rs  obelysk_executor.rs
src/coordinator/: blockchain_bridge.rs  blockchain_integration.rs  circuit_breaker.rs  config.rs  consensus_init.rs  event_handler.rs  gpu_pricing.rs  job_processor.rs  kafka.rs  metrics.rs  mining_rewards.rs  mod.rs  network_coordinator.rs  production_coordinator.rs  proof_verification.rs  rate_limiter.rs  settlement.rs  simple_coordinator.rs  supply_router.rs  worker_manager.rs
src/gpu/: mod.rs  nvml_monitor.rs
src/indexer/: contract_events.rs  db_writer.rs  event_listener.rs  event_processor.rs  mod.rs
src/ingest/: mod.rs  secure_gateway.rs
src/network/: dht.rs  discovery.rs  encrypted_jobs.rs  gossip.rs  health_reputation.rs  job_distribution.rs  mod.rs  nonce_tracker.rs  p2p.rs  result_collection.rs
src/node/: coordinator.rs  mod.rs  worker.rs
src/obelysk/: README.md  aml_monitor.rs  circuit.rs  compute_invoice.rs  ecdsa.rs  elgamal.rs  etl.rs  field.rs  io_binder.rs  ml_gadgets.rs  mod.rs  montgomery.rs  multi_asset_privacy.rs  multicall_builder.rs  nullifier_tree.rs  payment_client.rs  poseidon_gpu.rs  pow_kernel.cu  privacy_client.rs  privacy_state.rs  privacy_swap.rs  proof_aggregation.rs  proof_compression.rs  proof_packer.rs  prover.rs  stwo_adapter.rs  tee_proof_pipeline.rs  tee_types.rs  tee_verifier.rs  threshold_decryption.rs  vm.rs  worker_keys.rs
src/obelysk/fhe/: compute.rs  encryption.rs  gpu_acceleration.rs  keys.rs  mod.rs  types.rs
src/obelysk/gpu/: cuda.rs  fft.rs  memory_pool.rs  mod.rs  multi_gpu_prover.rs  poly_ops.rs  rocm.rs  stwo_gpu_backend.rs  work_stealing.rs
src/obelysk/starknet/: account_manager.rs  admin_wallet.rs  faucet_client.rs  fraud_proof_client.rs  (+9 more)
src/pricing/: gpu_database.rs  market_state.rs  mod.rs
src/security/: auth.rs  gpu_tee.rs  https_redirect.rs  middleware.rs  mod.rs  tee.rs  tls.rs  validation.rs
src/storage/: config.rs  database_simple.rs  models.rs
src/validator/: consensus.rs  metrics.rs  mod.rs  persistence.rs
tests/: blockchain_integration_test.rs  coordinator_payment_integration.rs  dashboard_integration_test.rs  database_test.rs  gpu_backend_integration.rs  gpu_fhe_e2e_test.rs  io_binding_test.rs  job_distribution_test.rs  multi_asset_privacy_test.rs  p2p_integration_test.rs  privacy_contract_integration.rs  privacy_integration_test.rs  proof_generation_test.rs  proof_payment_integration.rs  real_blockchain_integration_test.rs  result_collection_test.rs  secure_randomness_test.rs  sepolia_proof_pipeline_test.rs  starknet_proof_submission_test.rs  worker_payment_e2e.rs
(+6 files in other folders)
